@startuml
'https://plantuml.com/class-diagram

abstract class AbstractHouse
class CommonHouse
class HighBuilding
class Client

AbstractHouse <|-- CommonHouse
AbstractHouse <|-- HighBuilding
CommonHouse <-- Client
HighBuilding <-- Client

class AbstractHouse {
buildBasic(): void
buildWall(): void
roofed(): void
build(): void
}

@enduml